# pseudo-compilator

./: .gitignore  0IMPORTANT.md  Cargo.toml  Makefile  README.md  alacritty  code.pseudo  flake.nix  main.proto  numere-prime  prog  spec.md  test2  test3  test5
docs/: cover.typ  grammar.ebnf  grammar.typ  main.typ  style.typ  works.bib
docs/bench_server/: __main__.py
docs/dwarf_example/: Makefile  c_snip.c  dwarf_snip.txt  main  main.c
docs/llvm_example/: gen.bash  main.c
docs/performance_comparison/: .gitignore  benches.py  convert.py  main.py  runners.py
docs/stats/: analyze.py
editor/: idk  index.html  package-lock.json  package.json
editor-backend/: app.py
editor-backend/state/: marker
editor-frontend/: .gitignore  compiled.js  package-lock.json  package.json
editor-frontend/src/: App.css  App.tsx  CommandLine.tsx  HelpModal.tsx  SettingsModal.tsx
editor/public/: index.html
editor/src/: App.css  App.tsx  CommandLine.tsx
interpretor/: Cargo.toml  prog  spec.md  test1  test4
interpretor/interpretor-cli/: Cargo.toml
interpretor/interpretor-core/: Cargo.toml
interpretor/interpretor-core/src/: ast.rs  compiler.rs  lib.rs  parse.rs  runtime.rs  source.rs  syntax.rs
interpretor/interpretor-core/src/compiler/: debug.rs  error.rs  expression.rs  fail.rs  instruction.rs  lvalue.rs  other.rs  output.rs  variable.rs
interpretor/interpretor-core/src/parse/: expression.rs  line.rs  mod.rs
interpretor/src/: lib.rs  (+3 more)
pseudo/: Cargo.toml  Makefile  README.md  compile.py
random/: test5
src/: expression.rs  lib.rs  main.rs  runtime.rs  syntax.rs
(+57 files in other folders)
