[package]
name = "pseudocompilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# [lib]
# name = "pseudocompilator"
# path = "src/lib.rs"
# crate-type = ["cdylib"]

# [[bin]]
# name = "pseudocompilator"
# path = "src/main.rs"

[dependencies]
itertools = "0.10.3"
unicode-segmentation = "1.9.0"
trace = "0.1.6"
wasm-bindgen = "0.2.79"
ouroboros = "0.14.2"
indoc = "1.0.4"
