[package]
name = "interpretor-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.3"
unicode-segmentation = "1.9.0"
trace = "0.1.6"
# wasm-bindgen = "0.2.79"
# ouroboros = "0.14.2"
indoc = "1.0.4"
enumflags2 = "0.7.4"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
tempfile = "3.10.1"
interpretor-sys = { workspace = true }

[features]

# Use wasm-bindgen to generate wasm bindings for some stuff.

# TODO: look for way to not have to do this, or otherwise try and pretty it up.

wasm = []
